--- a/peikoff_objectivism/mainmatter/1.tex
+++ b/peikoff_objectivism/mainmatter/1.tex
@@ -5,7 +5,7 @@
 
     \section{Existence, Identity and Consciousness as the Basic Axioms}
 
-        The first thing we perceive when awake is very simple: something exists. It does not matter what you focus on, nor if your eyes are open or closed; if you perceive something, you perceive that something exists. We start from exactly this self-evidence. Thus the first (and only) axiom of philosophy is Axiom \ref{ax:existence}.
+        The first thing we perceive when awake is very simple: something exists. It does not matter what you focus on, nor if your eyes are open or closed; if you perceive something, you perceive that something exists. We start from exactly this self-evidence. Thus the first (and only) axiom of Objectivist philosophy is Axiom \ref{ax:existence}.
     
             \begin{axiom}[Existence]
             \label{ax:existence}
@@ -29,7 +29,7 @@
                 To exist is to posses identity, to be is to be something. Each thing is identical with itself.
             \end{corollary}
 
-        The fact that we perceive the existence of something, whatever it may be, makes us possess consciousness, following Definition \ref{def:consciousness}. This leads us to Corollary \ref{cor:consciousness}.
+        The fact that we perceive the existence of something, whatever it may be, makes us possess consciousness (Definition \ref{def:consciousness}). This leads us to Corollary \ref{cor:consciousness}.
         
             \begin{definition}[Consciousness]
             \label{def:consciousness}
@@ -41,7 +41,7 @@
                 Consicousness exists.
             \end{corollary}
             
-        Consciousness is impossible without existence: there would be nothing to be conscious of. There is never consciousness of something which does not exist. If something nonexistent is perceived than what the perceiver possess is not consciousness. Just as the first and only axiom (Axiom \ref{ax:existence}) the first two corollaries are also known to be true merely by sense perception, without the possibility for or need of any proof. As a matter of fact, every proof takes the three axioms above as given.
+        Consciousness is impossible without existence: there would be nothing to be conscious of. There is never consciousness of something which is not. If something nonexistent is perceived then what the perceiver possess is not consciousness. Just as the first and only axiom (Axiom \ref{ax:existence}) the first two corollaries are also known to be true merely by sense perception, without the possibility for or need of any proof. As a matter of fact, every proof takes the axiom and corollaries above as given.
         
         Two corollaries follow from the Law of Identity: the Law of Non-Contradiction (Corollary \ref{cor:non}) and the Law of the Excluded Middle (Corollary \ref{cor:excluded}). The Law of Identity together with its two corollaries define logic (Definition \ref{def:logic}).
             
@@ -69,7 +69,7 @@
             
     \section{Causality as a Corollary of Identity}
         
-        The content of the world men perceive is constituted by entities, which are everything there is to observe. The concept of ``entity'', just like the concept of ``existence'', cannot be defined by means of other concepts, just ostensively. Categories of being (such as qualities or quantities) do not have metaphysical primacy, as all represent merely aspects of entities.
+        The content of the world mwe perceive is constituted by entities, which are everything there is to observe. The concept of ``entity'', just like the concept of ``existence'', cannot be defined by means of other concepts, just ostensively. Categories of being (such as qualities or quantities) do not have metaphysical primacy, as all represent merely aspects of entities.
 
         Actions (Definition \ref{def:action}) also do not exist apart from entities. There are no floating actions: there are only actions performed by entities. As we also define define ``nature'' (Definition \ref{def:nature}) we arrive to the Law of Causality (Corollary \ref{cor:causality}).
         
@@ -97,7 +97,7 @@
             \begin{definition}[Cause]
             \label{def:cause}
                 \begin{enumerate}
-                    \item A person or thing that gives rise to an action, phenomenon, or condition.
+                    \item A person or thing that gives rise to an action, phenomenon, or conditionl,
                     \item reasonable grounds for doing, thinking, or feeling something.
                 \end{enumerate}
             \end{definition}
@@ -116,18 +116,23 @@
                 The nature of the entity (what it is) is what causes the entity's actions. The actions must be so, as an entity acts in accordance with its nature.
             \end{proof}
             
-        Cause and effect are an universal law of reality. It is a law inherent in being qua being: to be is to be something (Corollary \ref{cor:identity}), and to be something is to act accordingly (Corollary \ref{cor:causality}). Every action has a cause, and the same cause leads to the same effect. Nevertheless, not every entity has a cause. The universe, being everything that exists, cannot have a cause, as this would require it to be caused by nonexistence - which, not being, cannot act as a cause.
+        Cause and effect are an universal law of reality. It is a law inherent in being qua being: to be is to be something (Corollary \ref{cor:identity}), and to be something is to act accordingly (Corollary \ref{cor:causality}). Every action has a cause, and the same cause leads to the same effect. Nevertheless, not every entity has a cause. The universe, being everything that exists, cannot have a cause, as this would require it to be caused by nonexistence - which, not being, cannot act as a cause. In other words, the universe is eternal (Theorem \ref{the:universe}).
+
+            \begin{theorem}
+            \label{the:universe}
+                The universe is eternal.
+            \end{theorem}
         
     \section{Existence as Possessing Primacy over Consciousness}
         
-        Existence precedes consciousness. Consciousness, following Definition \ref{def:consciousness}, is the faculty of being aware. An entity's nature is not affected by the nature of any other entity, even if the latter's nature includes the faculty of being aware of the first's existence. This fact is summarized in Corollary \ref{cor:primacy}.
+        Existence precedes consciousness. Consciousness (Definition \ref{def:consciousness}) is the faculty of being aware. An entity's nature is not affected by the nature of any other entity, even if one's nature includes the faculty of being aware of the other's existence. This fact is summarized in Corollary \ref{cor:primacy}.
         
             \begin{corollary}[Primacy of Existence]
             \label{cor:primacy}
                 Things are what they are independent of consciousness.
             \end{corollary}
         
-        Proofs depend on the primacy of existence, as they presuppose the principle that facts are not malleable. Since knowledge is knowledge of reality, every metaphysical principle has epistemological implications. As the nature of the world is not maleable, nothing is relevant to cognition except data drawn from the world. This leads us to the only valid method of cognition: reason.
+        Proofs depend on the primacy of existence, as they presuppose the principle that facts are not malleable. Since knowledge is knowledge of reality, every metaphysical principle has epistemological implications. As the nature of the world is not maleable, nothing is relevant to cognition except data drawn from the world (Chapter \ref{cha:sense_perception}). This leads us to the only valid method of cognition: reason (Chapter \ref{cha:reason})
             
     \section{The Metaphysically Given as Absolute}
     
