--- a/peikoff_objectivism/mainmatter/2.tex
+++ b/peikoff_objectivism/mainmatter/2.tex
@@ -1,4 +1,5 @@
 \chapter{Sense Perception and Volition}
+\label{cha:sense_perception}
 
     Metaphysics is, basically, the identification of the fact of existence and its corollaries. Epistemology, on the other hand, is the science that studies the nature and means of human knowledge. If the mind wishes to know existence, it must conform to existence. A conceptual knowledge can depart from reality, so it needs a method of cognition. Epistemology is based, therefore, on the premise that man can acquire knowledge only if he performs certain definite processes.
 
