--- a/peikoff_objectivism/mainmatter/5.tex
+++ b/peikoff_objectivism/mainmatter/5.tex
@@ -1,4 +1,5 @@
 \chapter{Reason}
+\label{cha:reason}
 
     The whole of our phisolophy amounts to ``follow reason''. ``Reason'' (Definition \ref{def:reason}), nevertheless, is a higher-level concept, and to grasp its meaning one must first grasp its hierarchical roots. These are what we have been discussing about in the chapters above.
 
