--- a/peikoff_objectivism/mainmatter/2.tex
+++ b/peikoff_objectivism/mainmatter/2.tex
@@ -1,7 +1,9 @@
 \chapter{Sense Perception and Volition}
 \label{cha:sense_perception}
 
-    Metaphysics is, basically, the identification of the fact of existence and its corollaries. Epistemology, on the other hand, is the science that studies the nature and means of human knowledge. If the mind wishes to know existence, it must conform to existence. A conceptual knowledge can depart from reality, so it needs a method of cognition. Epistemology is based, therefore, on the premise that man can acquire knowledge only if he performs certain definite processes.
+    Metaphysics is, basically, the identification of the axiom of existence and its corollaries. Epistemology, on the other hand, is the science that studies the nature and means of human knowledge.
+    
+    If the mind wishes to know existence, it must conform to existence. A conceptual knowledge can depart from reality, so it needs a method of cognition. Epistemology is based, therefore, on the premise that man can acquire knowledge only if he performs certain definite processes.
 
     Every process of knowledge involves the object of cognition and the mens of cognition. The objects is always some aspect of reality (there is nothing else to know). The means pertains to the kind of consciousness and determines the form of cognition.
     
@@ -18,28 +20,30 @@
                 Validity of the Senses is a corollary of Consciousnes. If man is conscious, then it is conscious of that which is; it wouldn't be conscious otherwise.
             \end{remark}
         
-        Proof consists in reducing an idea back to the data provided by the senses. The data itself is, therefore, self-evident, and is outside the province of proof. Science is nothing more than the conceptual unraveling of sensory data, it has no other primary evidence from which to proceed.
+        Proof consists in reducing an idea back to the data provided by the senses. The data itself is self-evident, and is outside the province of proof. Science is nothing more than the conceptual unraveling of sensory data, it has no other primary evidence from which to proceed.
         
         Our sensations are caused in part by the entities we perceive, and in part by our sense organs. Nevertheless, any difference in sensory form among perceivers is precisely that: a difference in form of perceiving the same entities, the same reality. ``Looks'' means ``appears to our visual sense''. Whatever facts the senses register are facts.
     
     \section{Sensory Qualities as Real}
         
-        The entities we perceive have a nature independent of ourselves, and our sense organs also have their own nature. Nevertheless, it is possible to distinguish between form and object. The qualities of objects are not merely ``in the object'', nor are they merely ``in the mind''. The qualities we perceive are, actuallly, in man's form of grasping the object. Is is not object alone or perceiver anole, it is object-as-perceived. The form of objects is, being self-evident, a metaphisically given fact: they are real. This is Corollary \ref{cor:qualities}.
+        The entities we perceive have a nature independent of ourselves, and our sense organs also have their own nature. Nevertheless, it is possible to distinguish between form and object. 
+        
+        The qualities of objects are not merely ``in the object'', nor are they merely ``in the mind''. The qualities we perceive are, actuallly, in man's form of grasping the object. Is is not object alone or perceiver anole, it is object-as-perceived. The form of objects is, being self-evident, a metaphisically given fact: they are real. This is Corollary \ref{cor:qualities}.
 
-            \begin{corollary}[Reality of Sensory Qualities]
+            \begin{corollary}
             \label{cor:qualities}
                 Sensory qualities are real.
             \end{corollary}
 
             \begin{remark}
-                Reality of Sensory Qualities is a corollary of Validy of the Senses. If our senses are valid, the form of perceiving entities our senses provide us with is also valid.
+                The reality of sensory qualities is a corollary of the validy of the Senses. If our senses are valid, the form of perceiving entities our senses provide us with is also valid.
             \end{remark}
 
         Demanding man to perceive entities without qualities is to demand the entities to be perceived in no sensory form. It is to reject our senses because they have identity, because they exist. We can know the content of reality ``pure'', apart from man's perceptual form; but we can do so only by abstracting away man's perceptual form - only by starting from sensory data, then performing a complex scientific process.
     
     \section{Consciousness as Possessing Identity}
 
-        Every existence is bound by the Laws of Identity and Causality (Corollaries \ref{cor:identity} and \ref{cor:causality}). This applies not only to objects, but to everything which there is, including consciousness, what leads us to Corollary \ref{cor:consciousness_identity}.
+        Every existence is bound by the laws of identity and causality (Corollaries \ref{cor:identity} and \ref{cor:causality}). This applies not only to objects, but to everything which there is, including consciousness (Corollary \ref{cor:consciousness_identity}).
         
             \begin{corollary}
             \label{cor:consciousness_identity}
@@ -54,7 +58,7 @@
 
     \section{The Perceptual Level as the Given}
 
-        Some animals have only sensations (as in Definition \ref{def:sensation}). We, human adults, on the other hand, encouter entities when we look at the world. This happens because we have experienced many kinds of sensations from similar objects in the past, and our brains have retained and integrated them; it has put them toguether to form an indivisible whole. This gives us the ability to see, for example, not just a brown spot, but a table.
+        Some animals have only sensations (as in Definition \ref{def:sensation}). We, humans, on the other hand, encouter entities when we look at the world. This happens because we have experienced many kinds of sensations from similar objects in the past, and our brains have retained and integrated them; it has put them toguether to form an indivisible whole.
             
             \begin{definition}[Sensation]
             \label{def:sensation}
@@ -70,20 +74,20 @@
 
         Direct experience means the perceptual level of consciousness. What we are given as adults when we use our senses (giving aside all conceptual knowledge) is the awareness of entities, not merely sensations. Epistemologically, therefore, the perceptual stage comes first. Perceptions constitute the base of cognition, they are the self-evident. This leads us to Corollary \ref{cor:percepts}.
 
-            \begin{corollary}[Percepts as Given]
+            \begin{corollary}
             \label{cor:percepts}
                 The perceptual level is given.
             \end{corollary}
 
             \begin{remark}
-                Percepts as Given is a corollary of Validy of the Senses. What our senses give us are perceptions.
+                The percepts as given is a corollary of the validy of the senses. What our senses give us are perceptions.
             \end{remark}
     
-        There is no guidance philosophy can give us about perception, it is an automatic process over which we have no power. In regard to another more complex king of integration, which we do not perform automatically, philosophy does have advice to offer. It is the integration of precepts into concepts. This brings us to the threshold of the conceptual level of consciousness and to the second issue in the anteroom of epistemology: volition.
+        There is no guidance philosophy can give us about perception, it is an automatic process over which we have no power. In regard to another more complex king of integration, which we do not perform automatically, philosophy does have advice to offer. It is the integration of precepts into concepts. This brings us to the fundamentals of the conceptual level of consciousness and to the second issue in the anteroom of epistemology: volition.
 
     \section{The Primary Choice as the Choice to Focus or Not}
 
-        Man is a volitional being (Definition \ref{def:volition}), who functions freely. A course of thought or action is free if it is selcted between alternatives, if it could be otherwise if the human had not decided as it had.
+        Man is a volitional being (Definition \ref{def:volition}). A course of thought or action is free if it is selcted between alternatives, if it could be otherwise if the human had not decided as it had.
 
             \begin{definition}[Volition]
             \label{def:volition}
@@ -104,14 +108,14 @@
 
             \begin{theorem}
             \label{the:focus}
-                The primary choice is the choice to focus or not.
+                The primary choice is to focus or not.
             \end{theorem}
 
             \begin{proof}
-                To focus is to direct the mind to a goal, is to commit oneself to attain awareness of reality, is the readiness to think, and therefore the precondition of thinking. All choices one makes by thinking can be reductible to the first choice, that of start to think about what choice to make. Therefore the irreductible choice, the primary choice, is to focus or not, as it can't be reducted to any other choice.
+                To focus is to direct the mind to a goal, is to commit oneself to attain awareness of reality, is the readiness to think, and therefore the precondition of thinking. All choices one makes by thinking can be reductible to the first choice, that of start to think about what choice to make. Therefore the irreductible choice, the primary choice, is to focus or not, as it can't be reduced to any other choice.
             \end{proof}
 
-        To focus is work and is experienced as such. Work, in the sanse of basic menatal effort (Definition \ref{def:effort}.
+        To focus is to work and is experienced as such. Work, in the sense of basic menatal effort (Definition \ref{def:effort}.
 
             \begin{definition}[Effort]
             \label{def:effort}
@@ -122,19 +126,21 @@
 
     \section{Human Actions, Mental and Physical, as Both Caused and Free}
     
-        Thought is a volition activity, its steps are chosen (as against necessitated). Aside from the primary choice to focus, the other choices are reductible. In their case, it is legitimate to ask: why did the individual choose as he did? what was the cause of his choice?
+        Thought is a volitional activity, its steps are chosen (as against necessitated). Aside from the primary choice to focus, the other choices are reductible. In their case, it is legitimate to ask: why did the individual choose as he did? what was the cause of his choice?
 
-        In regard to human actions, however, to be caused does not mean to be necessitaded (as it means for matter). Man chooses the causes that shape his actions. To say that a higher-level choice was caused is to say there was a reason behind it.
+        In regard to human actions, however, to be caused (Definition \ref{def:cause})does not mean to be necessitaded (as it means for matter). Man chooses the causes that shape his actions. To say that a higher-level choice was caused is to say there was reason behind it.
 
-        The Law of Causality (Axiom \ref{cor:causality}) still holds in the case of an irreductible choice. The action of choice is performed and necessitated by the nature of human consciousness.
+        The Law of Causality (Corollary \ref{cor:causality}) still holds in the case of an irreductible choice. The action of choice is performed and necessitated by the nature of human consciousness.
 
 
     \section{Volition as Axiomatic}
 
-        If man could not choose among alternatives, the field of epistemology would be useless, as there is no guidance philosophy can give to a deterministic process. The existence of 'validation' or 'proof' requires a volitional consciousness to chose among alternative ideas. To ask for the proof of volition is to ask to use volition to prove it (we saw an analogous situation when it is asked to prove the senses). Nevertheless, volition is self-evident, as it is something we perceive directly in ourselves, available to any act of introspection. It is a corollary of consciousness.
+        If man could not choose among alternatives, the field of epistemology would be useless, as there is no guidance philosophy can give to a deterministic process. The existence of 'validation' or 'proof' requires a volitional consciousness to chose among alternative ideas.
+        
+        To ask for the proof of volition is to ask to use volition to prove itself (we saw an analogous situation when it is asked to prove the senses). Nevertheless, volition is self-evident, as it is something we perceive directly in ourselves, available to any act of introspection. It is a corollary of consciousness.
 
             \begin{corollary}[Volition]
                 Human consciousness possesses volition.
             \end{corollary}
 
-        The fact that we regularly make choices it directly accessible to us, as it is to any volitional consciousness. Volition is an axiom, a primary, a starting point of conceptual cognition and of the subject of epistemology. The faculty of reason is the faculty of volition.
+        The fact that we regularly make choices it directly accessible to us, as it is to any volitional consciousness. Volition is a primary, a starting point of conceptual cognition and of the subject of epistemology.
