--- a/peikoff_objectivism/mainmatter/3.tex
+++ b/peikoff_objectivism/mainmatter/3.tex
@@ -1,6 +1,3 @@
-\part{Epistemology}
-\label{part:epistemology}
-
 \chapter{Concept-Fromation}
 
     Sensory material is the first step of knowledge. Nevertheless, human knowledge is a conceptual phenomena. Therefore, man has to conceptualize the information provided by the senses.
@@ -32,7 +29,7 @@
                 Just like the identity of an existence is observed in reality, is perceptually given, so are partial identities and partial non identities between existents.
             \end{proof}
 
-        When we look at something, we do not se a thing, we see a thing of a specific kind, in relatioship to every other thing of the same kind (for example, you don't see this thing, you see this book, this object, this document). We grasp an entity as a member of a group of similar members. The implicit concept present in this view of the world is "unit", as in Denifition \ref{def:unit}. The ability to regard entities as units is man's distinctive method of cognition.
+        When we look at something, we do not se a thing, we see a thing of a specific kind, in relatioship to every other thing of the same kind (for example, you don't see this ``thing'', you see this book). We grasp an entity as a member of a group of similar members. The implicit concept present in this view of the world is ``unit'' (Denifition \ref{def:unit}). The ability to regard entities as units is man's distinctive method of cognition.
 
             \begin{definition}[Unit]
             \label{def:unit}
@@ -41,9 +38,9 @@
 
         By treating entities as members of groups of similar entities, man can apply to all entities of a group the knowledge he gains by studying only some of its members. It is essential to grasp that in the world apart form men there are no units, there are only existents. To view things as units is to adopt a human perspective on things.
 
-        The concept "unit" is an act of consciousness, but it is not an arbitraty creatin of consciousness: it is a method of identification or classification according to the attributes which a consciousness observes in reality. Units do no exsit qua units, what exists are things, but units are things viewed by a consciousness in certain existing relationships.
+        The concept ``unit'' is an act of consciousness, but it is not an arbitraty creation of consciousness: it is a method of identification or classification according to the attributes which a consciousness observes in reality. %Units do no exsit qua units, what exists are things, but units are things viewed by a consciousness in certain existing relationships.
 
-        Without the implicit concept of "unit" man could not reach the conceptual method of knowledge. Without the same implicit conpect man could not enter the field of mathematics. Thus the same concept is the base and start of two fields: the conceptual and the mathematical, a fact that points to an essential connection between the two fields. It suggests that concept-formation is in some way a mathematical process.
+        Without the implicit concept of ``unit'' man could not reach the conceptual method of knowledge. Without the same implicit conpect man could not enter the field of mathematics. Thus the same concept is the base and start of two fields: the conceptual and the mathematical, a fact that points to an essential connection between the two fields. It suggests that concept-formation is in some way a mathematical process.
 
         Two main processes are involved in the concious process man perform in order to regard entities as units: differentiation and integration (Definitions \ref{def:differentiation} and \ref{def:integration}).
 
@@ -60,10 +57,6 @@
         In order to move from the stage of sensation to that of perception, we have to discriminate sensory qualities and integrate them into entities. The same two processes occur in the movement from percepts to concepts. In this case, however, the processes are not performed for us automatically.
 
         We begin the formation of concepts by isolating a group of concretes. We do this on the basis of observed similarities that distibguish this concretes from the rest of our perceptual field. It is important to stress that the similarities are observed, they are perceptually given (Theorem \ref{the:similarities}).
-
-        \begin{proof}
-            Following Definition \ref{def:similarity}, similarity is partial identity. Identity is self-evident, therefore perceptually given.
-        \end{proof}
 
         The distinctively human element in the above is our ability to abstract (Definition \ref{def:abstraction}) such similarities from the differences in which they are embedded.
 
@@ -105,7 +98,7 @@
 
         Similar concretes integrated by a concept differ from one another only quantitatively, only in the measurements of their characteristics. When we form a concept, therefore, our mental process consists in retaining the characteristics, but omitting their measurements. 
         
-        The principle is: the relevant measurements must exist in some quantity, but may exist in any quantity. In this sense, in the form of an epistemological standing order, the concept may be said to retain all the characteristics of its referents and to omit all the measurements. A man's grasp of similarity is actually his mind's grasp of a mathematical fact: the fact that certain concretes are commensurable — that they (or their attributes) are reducible to the same unit(s) of measurement.
+        The principle is: the relevant measurements must exist in some quantity, but may exist in any quantity. A man's grasp of similarity is actually his mind's grasp of a mathematical fact: the fact that certain concretes are commensurable — that they (or their attributes) are reducible to the same unit(s) of measurement.
 
         So far, we have been considering measurement primarily in regard to the integration of concretes. Measurement also plays a special role in the first step of concept-formation: the differentiation of a group from other things. Such differentiation cannot be performed arbitrarily, only by a commensurable characteristic. 
         
@@ -141,7 +134,7 @@
 
             \begin{definition}[Floating Abstraction]
             \label{def:floating}
-                A concept detachets from existents.
+                A concept detached from existents.
             \end{definition}
 
         If a concept is to be a device of cognition, it must be tied to reality. It must denote units that one has methodically isolated from all others. This is the basic function of a definition: to distinguish a concept from all other concepts and thus to keep its units differentiated from all other existents.
@@ -178,7 +171,7 @@
 
         The definitional principle is: wherever possible, an essential characteristic must be a fundamental.
 
-        The truth of a proposition depends not only on its relation to the facts of the case, but also on the truth of the defi- nitions of its constituent concepts. If these concepts are detached from reality then so are the propositions that employ them. A proposition can have no greater validity than do the concepts that make it up. The precondition of the quest for truth, therefore, is the formulation of proper definitions.
+        The truth of a proposition depends not only on its relation to the facts of the case, but also on the truth of the definitions of its constituent concepts. If these concepts are detached from reality then so are the propositions that employ them. A proposition can have no greater validity than do the concepts that make it up. The precondition of the quest for truth, therefore, is the formulation of proper definitions.
 
         A concept is not interchangeable with its definition. A concept designates existents, including all their characteristics, whether definitional or not.
 
