--- a/peikoff_objectivism/mainmatter/4.tex
+++ b/peikoff_objectivism/mainmatter/4.tex
@@ -1,63 +1,52 @@
 \chapter{Objectivity}
 
-    We will now begin to identify the rules men must follow in their thinking if knowledge is the goal. These rules can be condensed into one principle: thinking, to be valid, must adhere to reality. But how does one guarantee adherence to reality? The answer lies in the concept of "objectivity".
+    We will now begin to identify the rules men must follow in their thinking if knowledge is the goal. These rules can be condensed into one principle: thinking, to be valid, must adhere to reality. But how does one guarantee adherence to reality? The answer lies in the concept of ``objectivity''.
 
     \section{Concepts as Objective}
 
-        "Objectivity" arises because concepts are formed by a specific process and, as a result, bear a specific kind of relationship to reality. Concepts do not pertrain to consciousness alone or to existence alone, they are products of a specific kind of relationship between the two. Abstractions are products of man's faculty of cognition, which, concerned with grasping reality, must adhere to it.
+        ``Objectivity'' arises because concepts are formed by a specific process and, as a result, bear a specific kind of relationship to reality. Concepts do not pertrain to consciousness alone or to existence alone, they are products of a specific kind of relationship between the two. Abstractions are products of man's faculty of cognition, which, concerned with grasping reality, must adhere to it.
 
-        Conceptualization is not an automatic reaction to stimuli (as perception is). Concept formation is volitional, requiring effort. Man must learn to do it correctly. In such processing, the basic method he uses, measurement-omission, is dictated by the nature of his cognitive faculty. The result is a human perspective on things, not a revelation of a special sort of entity or attribute intrinsic in the world apart from man.
+        Conceptualization is not an automatic reaction to stimuli (as is perception). Concept formation is volitional, requiring effort. Man must learn to do it correctly. In such processing, the basic method he uses, measurement-omission, is dictated by the nature of his cognitive faculty. The result is a human perspective on things, not a revelation of a special sort of entity or attribute intrinsic in the world apart from man.
 
         On the other hand, consciousness is the faculty of grasping that which is, and there is a metaphysical basis for concepts. The charateristics of entities is a fact, not a creation of man. The method of concept formation conforms each step to facts, otherwise it would be irrelevant to a cognitive need.
 
+        We define two classes of concepts wich are not objective: stolen concepts, which is the use of a higher-level concept while denying or ignoring its hierarchical roots; invalid concepts, which are words without specific definitions, without referents (the test of an invalid concept is the fact that it cannot be reduced to the perceptual level).
+
     \section{Objectivity as Volitional Adherence to Reality by a Method of Logic}
 
-        The objective approach to concepts leads to the view that, beyond the perceptual level, knowledge is the grasp of an object through an active, reality-based process chosen by the subject. The steps of this process must contitute a method of cognition, that guarantees that men remains in contact with reality. We define objectivity in Definition \ref{def:objectivity}. Reality, existents, cannot be objetive, they simply are. It is conceptual processes which are objective.
+        The objective approach to concepts leads to the view that, beyond the perceptual level, knowledge is the grasp of an object through an active, reality-based process chosen by the consciousness. The steps of this process must contitute a method of cognition, that guarantees that men remains in contact with reality. We define objectivity in Definition \ref{def:objectivity}. Reality, existents, cannot be objetive, they simply are. It is conceptual processes which are objective.
 
             \begin{definition}[Obectivity]
             \label{def:objectivity}
                 Volitional adherence to reality by following certain rules of method, a method based on facts and appropriate to man's form of cognition.
             \end{definition}
 
-        The method of cognition that objectivity requires is logic (Definition \ref{def:logic}), which is a volitional consciousness' method of conforming to reality, it is the method of reason. Logic is the art of noncontradictory identification.
+        The method of cognition that objectivity requires is logic (Definition \ref{def:logic}), which is a volitional consciousness' method of conforming to reality - it is the method of reason. %Logic is the art of noncontradictory identification.
 
     \section{Knowledge as Contextual}
 
-        Concepts are a relational form of knowledge.
+        Concepts are a relational form of knowledge. In other words, concepts are formed in a context — by relating concretes to a field of contrasting entities. This body of relationships, which constitutes the context of the concept, is what determines its meaning. Human knowledge on every level is relational. Knowledge is not a juxtaposition of independent items; it is a unity.
 
-        In other words, concepts are formed in a context—by relating concretes to a field of contrasting entities. This body of relationships, which constitutes the context of the concept, is what determines its meaning.
-
-        Human knowledge on every level is relational. Knowledge
-        is not a juxtaposition of independent items; it is a unity.
-
-        The relational nature of knowledge derives from two roots, one pertaining to the nature of existence, the other, to the nature of consciousness.
-
-        Metaphysically, there is only one universe. This means that everything in reality is interconnected.
-
-        Knowledge, therefore, which seeks to grasp reality, must also be a total; its elements must be interconnected to form a unified whole reflecting the whole which is the universe.
+        %The relational nature of knowledge derives from two roots, one pertaining to the nature of existence, the other, to the nature of consciousness.
+        
+        Metaphysically, there is only one universe. This means that everything in reality is interconnected. Knowledge, therefore, which seeks to grasp reality, must also be a total; its elements must be interconnected to form a unified whole reflecting the whole which is the universe.
 
         Leaving aside the primaries of cognition, which are selfevident, all knowledge depends on a certain relationship: it is based on a context of earlier information.
 
-        \begin{theorem}[Knowledge is contextual]
-            \label{the:context}
-                Metaphysically, there is only one universe. Therefore everything is interconnected. Knowledge, as it seeks to grasp reality, is also interconnected. The truth of any statement depends on the truth of every other, which is the context of the first.
-        \end{theorem}
+        %\begin{theorem}[Knowledge is contextual]
+        %    \label{the:context}
+        %        Metaphysically, there is only one universe. Therefore everything is interconnected. Knowledge, as it seeks to grasp reality, is also interconnected. The truth of any statement depends on the truth of every other, which is the context of the first.
+        %\end{theorem}
 
     \section{Knowledge as Hierarchical}
 
-        A first-level concept is one formed directly from perceptual data. Higher-level concepts, by contrast, presuppose earlier concepts.
+        A first-level concept is one formed directly from perceptual data. Higher-level concepts, by contrast, presuppose earlier concepts. A definite order of concept-formation in necessary. We begin with those abstractions that are closest to the perceptually given and mode gradually away from them.
 
-        A definite order of concept-formation in necessary. We begin with those abstractions that are closest to the perceptually given and mode gradually away from them.
+        The same principle of order applies to ecery field of human knowledge, nor merely to concept-formation - knowledge has a hierarchical structure. A hierarchy of knowledge means a body of concepts and conclusions ranked in order of lofical dependence.
 
-        The same principle of order applies to ecery field of human knowledge, nor merely to concept-formation.
-
-        Knowledge das a hierarchical structure.
-
-            \begin{definition}[Hierarchy]
-                A body of persons or things ranked in grades, orders, or classes, one above another.
-            \end{definition}
-
-        A hierarchy of knowledge means a body of concepts and conclusions ranked in order of lofical dependence.
+            %\begin{definition}[Hierarchy]
+            %    A body of persons or things ranked in grades, orders, or classes, one above another.
+            %\end{definition}
 
         The cencept or hierarchy is epistemological, not metaphysical, as facts are simultaneous in reality.
 
@@ -65,10 +54,4 @@
 
         The hierarchical view of knowledge states not only that every (nonaxiomatic) item has a context, but also that such context itself has an inner structure of logical dependence.
 
-        The epistemological responsibility imposed on man by the fact that knowledge is contextual is the need of integration. The responsibility imposed by the fact that knowledge is hierarchical is: the need of reduction.
-
-        Stolen concept: using a higher-level concept while denying or ignoring its hierarchical roots.
-
-        Invalid concepts: words without specific definitions, without referents. The test of an invalid concept is the fact that it cannot be reduced to the perceptual level.
-
-        Proof is a form of reduction. Proof is a form of retracing the hierarchical steps of the learning process.
+        The epistemological responsibility imposed on man by the fact that knowledge is contextual is the need of integration. The responsibility imposed by the fact that knowledge is hierarchical is the need of reduction. Proof is a form of reduction, of retracing the hierarchical steps of the learning process.
