New definitions (sex, etc)

--- a/peikoff_objectivism/mainmatter/1.tex
+++ b/peikoff_objectivism/mainmatter/1.tex
@@ -2,7 +2,11 @@
 
     \section{Existence, Identity and Consciousness as the Basic Axioms}
 
-        The first thing we perceive when awake is very simple: something exists. It does not matter what you focus on, nor if your eyes are open or closed; if you perceive something, you perceive that something exists. We start from exactly this self-evidence. Thus the first (and only) axiom of Objectivist philosophy is Axiom \ref{ax:existence}.
+        The first thing we perceive when awake is very simple: something exists.
+        It does not matter what you focus on, nor if your eyes are open or closed;
+            if you perceive something, you perceive that something exists.
+        We start from exactly this self-evidence.
+        Thus, the first (and only) axiom of objectivist philosophy is Axiom~\ref{ax:existence}.
     
             \begin{axiom}[Existence]
             \label{ax:existence}
