--- a/peikoff_objectivism/mainmatter/9.tex
+++ b/peikoff_objectivism/mainmatter/9.tex
@@ -16,11 +16,13 @@
 
     \section{Happiness as the Normal Condition of Man}
 
-        There are two oposite emotions - the first follows the achievement of value, the other from its loss - they are joy and suffering (Definitions \ref{def:joy} and \ref{def:suffering}). Happiness (Definition \ref{def:happiness}) follows from joy.
+        There are two opposite emotions - the first follows the achievement of value,
+            the other from its loss - they are joy and suffering (Definitions~\ref{def:joy} and \ref{def:suffering}).
+        Happiness (Definition \ref{def:happiness}) follows from joy.
 
         \begin{definition}[Joy]
         \label{def:joy}
-            Emotion that follows from the achienvement of values.
+            Emotion that follows from the achievement of values.
         \end{definition}
 
         \begin{definition}[Suffering]
@@ -47,10 +49,70 @@
             Emotion that follows from the depreciation of disvalues.
         \end{definition}
 
-    \section{Sex as Metaphysical}
+    \section{Sex}
 
         Here we shall consider sex as in the life of a rational man.
 
-        To celebrate something is to focus on it. Sex is a celebration of love. Love itself is the appreciation of values. Since the value of a man is his virtue and the latter is his volition, which is who he truly is, to celebrate self love is to celebrate oneself. To celebrate love towards the other is also to celebrate who the other truly is.
+        \begin{definition}[Like]
+        \label{def:like}
+            Find agreeable, enjoyable (Definition \ref{def:joy}), or satisfactory.
+        \end{definition}
 
-        
+        \begin{definition}[Attraction]
+        \label{def:attraction}
+            The action or power of evoking interest, pleasure, or liking (Definition \ref{def:like}) for someone or something.
+        \end{definition}
+
+        \begin{definition}[Sexual]
+        \label{def:sexual}
+            Relating to the instincts, physiological processes,
+                and activities connected with physical attraction (Definition \ref{def:attraction}]) or intimate physical contact between individuals.
+        \end{definition}
+
+        \begin{definition}[Sex]
+        \label{def:sex}
+             Sexual (Definition \ref{def:sexual}]) activity, including specifically sexual intercourse.
+         \end{definition}
+
+%        To celebrate something is to focus on it. Sex is a celebration of love. Love itself is the appreciation of values. Since the value of a man is his virtue and the latter is his volition, which is who he truly is, to celebrate self love is to celebrate oneself. To celebrate love towards the other is also to celebrate who the other truly is.
+%
+%        relating to the instincts, physiological processes, and activities connected with physical attraction or intimate physical contact between individuals.
+
+        \subsection{Monogamy}
+
+            \begin{definition}[Monogamy]
+            \label{def:monogamy}
+                The practice or state of having a sexual relationship with only one partner.
+            \end{definition}
+
+        \subsection{Orgy}
+
+            \begin{definition}[Orgy]
+            \label{def:orgy}
+                A wild party, especially one involving excessive drinking and unrestrained sexual activity.
+            \end{definition}
+
+            \begin{definition}[Party]
+            \label{def:party}
+                A social gathering of invited guests, typically involving eating, drinking, and entertainment.
+            \end{definition}
+
+            \begin{definition}[Gathering]
+            \label{def:gathering}
+                An assembly or meeting, especially a social or festive one or one held for a specific purpose.
+            \end{definition}
+
+            \begin{definition}[Festive]
+            \label{def:festive}
+                Cheerful and jovially celebratory.
+            \end{definition}
+
+            \begin{definition}[Celebrate]
+            \label{def:celebrate}
+                Acknowledge (a significant or happy day or event) with a social gathering or enjoyable activity.
+            \end{definition}
+
+            \begin{definition}[Aknowledge]
+                Accept or admit the existence or truth of.
+            \end{definition}
+
