--- a/peikoff_objectivism/objectivism.tex
+++ b/peikoff_objectivism/objectivism.tex
@@ -21,7 +21,7 @@
     linkcolor=blue,
     filecolor=magenta,      
     urlcolor=cyan,
-    pdftitle={Objectivism: the Philosophy of Ayn Rand (Notes)},
+    pdftitle={An Attempt of Reason},
     pdfpagemode=FullScreen,
     }
 
@@ -32,8 +32,9 @@
 \newtheorem*{remark}{Remark}
 \newtheorem{theorem}{Theorem}[section]
 
-\title{Objectivism: the Philosophy of Ayn Rand \\
-    (Notes)}
+\title{An Effort of Reason
+\\
+(Notes)}
 \author{Bernardo Paulsen}
 
 \begin{document}
